--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="back-button-container">
-        <button class="back-button" onclick="window.location.href='../blog.html'">← Go Back</button>
+        <button class="back-button" onclick="window.location.href='../index.html'">← Go Back</button>
     </div>
 
     <section class="blog-container">
